# blosc2-pure-rs

./: Cargo.toml  README.md  TODO.md  build.rs  ccc_mapping.toml
benches/: perf.rs
docs/: performance-profiling.md
examples/: bench_blosclz_gap.rs  compare_blosc2_rs.rs  profile_hotspots.rs  unshuffle_sizes.rs
src/: b2nd.rs  codecs.rs  compress.rs  constants.rs  filters.rs  header.rs  lib.rs  main.rs  schunk.rs  shuffle_sse2.rs
src/codecs/: blosclz.rs
tests/: codec_equivalence.rs  compress_equivalence.rs  equivalence.rs  filter_equivalence.rs  tier1_edge_cases.rs  tier1_multi_filter.rs  tier1_special_values.rs  tier2_stress.rs  unit_ffi.rs
tests/common/: mod.rs
