[package]
name = "blosc2-pure-rs"
version = "0.3.0"
edition = "2021"
description = "Rust implementation of the Blosc2 high-performance compression library"
license = "BSD-3-Clause"
repository = "https://github.com/henriksson-lab/blosc2-rs"
homepage = "https://github.com/henriksson-lab/blosc2-rs"
documentation = "https://docs.rs/blosc2-pure-rs"
readme = "README.md"
keywords = ["compression", "blosc", "lz4", "zstd", "shuffle"]
categories = ["compression", "encoding"]
include = [
    "/src/**/*.rs",
    "/benches/**/*.rs",
    "/docs/**/*.md",
    "/examples/**/*.rs",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE.txt",
]

[lib]
name = "blosc2_pure_rs"
path = "src/lib.rs"

[[bin]]
name = "blosc2"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["zlib-rs"]
cli = ["dep:clap"]
compare-blosc2-rs = ["dep:blosc2"]
# Use flate2's zlib-rs backend. This is the default because it benchmarked
# faster than the miniz_oxide-backed rust_backend in this crate.
zlib-rs = ["flate2/zlib-rs"]
# Fallback pure-Rust backend using miniz_oxide via flate2's rust_backend.
zlib-miniz = ["flate2/rust_backend"]
# (lz4hc-sys feature removed in v0.3.0 — pure-Rust LZ4HC is always available via lz4-pure-rs.)
# Internal feature for development testing against C-Blosc2.
# Not part of the public API. Requires c-blosc2 source in c-blosc2/.
_ffi = ["dep:cmake", "dep:bindgen"]

[dependencies]
blosc2 = { package = "blosc2-rs", version = "0.4.0", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
rayon = "1"
lz4-pure = { package = "lz4-pure-rs", version = "0.1.0", path = "/data/henriksson/github/claude/lz4-pure-rs" }
flate2 = { version = "1", default-features = false }
zstd = "0.13"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "perf"
harness = false

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
cmake = { version = "0.1", optional = true }
bindgen = { version = "0.72", optional = true }

[profile.release-dbg]
inherits = "release"
debug = true
